# choosing_electives_ui_tests

./: README.md  pyproject.toml  testcases.md
tests/: asserts.py  config.py  test_envs.py  test_web.py  userconfig.py
