[tool.poetry]
name = "choosing_electives_ui_test"
version = "0.1.0"
description = "UI test for the c choosing_electives project"
authors = ["Vyacheslav Tamarin <tamarin.vs@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.1"
selenium = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

